More tidying of graph creation.

--- a/school/elec_313/lab5/tex/data3.tex
+++ b/school/elec_313/lab5/tex/data3.tex
@@ -76,32 +76,50 @@
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
       \put(462,440){\makebox(0,0)[r]{\strut{}-1}}%
-      \put(462,1003){\makebox(0,0)[r]{\strut{} 0}}%
-      \put(462,1565){\makebox(0,0)[r]{\strut{} 1}}%
-      \put(462,2128){\makebox(0,0)[r]{\strut{} 2}}%
-      \put(462,2691){\makebox(0,0)[r]{\strut{} 3}}%
-      \put(462,3254){\makebox(0,0)[r]{\strut{} 4}}%
-      \put(462,3816){\makebox(0,0)[r]{\strut{} 5}}%
-      \put(462,4379){\makebox(0,0)[r]{\strut{} 6}}%
+      \csname LTb\endcsname%
+      \put(462,1059){\makebox(0,0)[r]{\strut{} 0}}%
+      \csname LTb\endcsname%
+      \put(462,1679){\makebox(0,0)[r]{\strut{} 1}}%
+      \csname LTb\endcsname%
+      \put(462,2298){\makebox(0,0)[r]{\strut{} 2}}%
+      \csname LTb\endcsname%
+      \put(462,2917){\makebox(0,0)[r]{\strut{} 3}}%
+      \csname LTb\endcsname%
+      \put(462,3536){\makebox(0,0)[r]{\strut{} 4}}%
+      \csname LTb\endcsname%
+      \put(462,4156){\makebox(0,0)[r]{\strut{} 5}}%
+      \csname LTb\endcsname%
+      \put(462,4775){\makebox(0,0)[r]{\strut{} 6}}%
+      \csname LTb\endcsname%
       \put(594,220){\makebox(0,0){\strut{}-7e-08}}%
+      \csname LTb\endcsname%
       \put(1158,220){\makebox(0,0){\strut{}-6e-08}}%
+      \csname LTb\endcsname%
       \put(1723,220){\makebox(0,0){\strut{}-5e-08}}%
+      \csname LTb\endcsname%
       \put(2287,220){\makebox(0,0){\strut{}-4e-08}}%
+      \csname LTb\endcsname%
       \put(2852,220){\makebox(0,0){\strut{}-3e-08}}%
+      \csname LTb\endcsname%
       \put(3416,220){\makebox(0,0){\strut{}-2e-08}}%
+      \csname LTb\endcsname%
       \put(3981,220){\makebox(0,0){\strut{}-1e-08}}%
+      \csname LTb\endcsname%
       \put(4545,220){\makebox(0,0){\strut{} 0}}%
+      \csname LTb\endcsname%
       \put(5110,220){\makebox(0,0){\strut{} 1e-08}}%
+      \csname LTb\endcsname%
       \put(5674,220){\makebox(0,0){\strut{} 2e-08}}%
+      \csname LTb\endcsname%
       \put(6239,220){\makebox(0,0){\strut{} 3e-08}}%
+      \csname LTb\endcsname%
       \put(6803,220){\makebox(0,0){\strut{} 4e-08}}%
-      \put(3698,4709){\makebox(0,0){\strut{}$V_{in}$ vs. $V_{out}$}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(5816,4206){\makebox(0,0)[r]{\strut{}$V_{in}$}}%
+      \put(5816,4602){\makebox(0,0)[r]{\strut{}$V_{in}$}}%
       \csname LTb\endcsname%
-      \put(5816,3986){\makebox(0,0)[r]{\strut{}$V_{out}$}}%
+      \put(5816,4382){\makebox(0,0)[r]{\strut{}$V_{out}$}}%
     }%
     \gplbacktext
     \put(0,0){\includegraphics{data3}}%
