--- a/school/elec_313/lab5/tex/report.tex
+++ b/school/elec_313/lab5/tex/report.tex
@@ -21,12 +21,12 @@ The objective is to construct and observe the operation of a CMOS inverter and N
 
  \begin{figure}[hbtp]
    \centering
-   \begin{subfigure}[b]{0.5\textwidth}
+   \begin{subfigure}[b]{0.4\textwidth}
      \includegraphics[width=\textwidth]{invert}
      \caption{\label{fig:invert} CMOS Inverter}
    \end{subfigure}%
    ~
-   \begin{subfigure}[b]{0.5\textwidth}
+   \begin{subfigure}[b]{0.4\textwidth}
      \includegraphics[width=\textwidth]{nand}
      \caption{\label{fig:nand} CMOS NAND}
    \end{subfigure}
@@ -51,25 +51,25 @@ The objective is to construct and observe the operation of a CMOS inverter and N
 
 \begin{figure}[hbtp]
   \centering
-  \input{data1.tex}
+  \resizebox{1.0\textwidth}{!}{\input{data1.tex}}
   \caption{\label{fig:data1} Output of CMOS inverter}
 \end{figure}
 
 \begin{figure}[hbtp]
   \centering
-  \input{data2.tex}
+  \resizebox{1.0\textwidth}{!}{\input{data2.tex}}
   \caption{\label{fig:data2} Data 2}
 \end{figure}
 
 \begin{figure}[hbtp]
   \centering
-  \input{data3.tex}
+  \resizebox{1.0\textwidth}{!}{\input{data3.tex}}
   \caption{\label{fig:data3} Data 3}
 \end{figure}
 
 \begin{figure}[hbtp]
   \centering
-  \input{data4.tex}
+  \resizebox{1.0\textwidth}{!}{\input{data4.tex}}
   \caption{\label{fig:data4} Output of CMOS NAND gate}
 \end{figure}
 
