--- a/school/elec_311/unit_2/project_3/tex/report.tex
+++ b/school/elec_311/unit_2/project_3/tex/report.tex
@@ -48,14 +48,13 @@
 \section{Discussion}
 \label{sec:procedure}
 
-The circuit to be constructed was a 2-bit comparator.  A 2-bit comparator takes two 2-bit numbers, $P = P_1P_0$ and $Q = Q_1Q_0$, and produces an output, $GT=1 \iff P>Q$.  The truth table describing this function is shown in Table~\ref{tab:truth}.  This can be displayed more concisely as a summation of min-terms: $\sum_m(P_1, P_0, Q_1, Q_0) = (4, 8, 9, 12, 13,14)$.
+\begin{figure}[hbtp]
+  \centering
+  \includegraphics[width=\textwidth]{adder}
+  \caption{\label{fig:adder} 4-bit adder/subtractor.}
+\end{figure}
 
-Using a Karnaugh map (Fig~\ref{fig:k_map}), a minimal form of the
-function was found: $GT = P_0 \overline{Q_1 Q_0} + P_1 P_0
-\overline{Q_0} + P_1 \overline{Q_1}$.  This function was then
-translated into the circuit shown in Fig~\ref{fig:circuit}.
-
-The NAND gate is considered to be a functionally complete set because any logic function can be created with only NAND gates.  This is demonstrated graphically in Figure~\ref{fig:nand_gates}.  Using these conversions, the circuit was again translated into one using only NAND gates (Fig~\ref{fig:circuit_nand}), and truth table verified (not shown).
+A diagram of a 4-bit adder/subtractor circuit is shown in Fig~\ref{fig:adder}.  It is composed of four 1-bit adders pieced together with some additional logic.
 
 \section{Results}
 \label{sec:results}
@@ -110,40 +109,5 @@ begin
 end Structural;
 \end{verbatim}
 
-\begin{figure}[hbtp]
-  \centering
-  \includegraphics[width=\textwidth]{adder}
-  \caption{\label{fig:adder} 4-bit adder/subtractor.}
-\end{figure}
-
-% \begin{figure}[hbtp]
-%   \centering
-%   \includegraphics[width=0.8\textwidth]{circuit}
-%   \caption{\label{fig:circuit} Circuit implemented from function.}
-% \end{figure}
-
-% \begin{figure}[hbtp]
-%   \centering
-%   \includegraphics[width=\textwidth]{circuit_nand}
-%   \caption{\label{fig:circuit_nand} Identical circuit using only NAND gates.}
-% \end{figure}
-
-% \begin{figure}[hbtp]
-%   \centering
-%   \begin{subfigure}[b]{0.4\textwidth}
-%     \includegraphics[width=\textwidth]{nand_invert}
-%     \caption{\label{fig:nand-invert} NOT gate}
-%   \end{subfigure}%
-%   ~
-%   \begin{subfigure}[t]{0.5\textwidth}
-%     \includegraphics[width=\textwidth]{nand_and}
-%     \caption{\label{fig:nand_and} AND gate}
-%   \end{subfigure}
-%   \begin{subfigure}[b]{0.5\textwidth}
-%     \includegraphics[width=\textwidth]{nand_or}
-%     \caption{\label{fig:nand_or} OR gate}
-%     \end{subfigure}
-%   \caption{\label{fig:nand_gates} NAND implementing other logic functions.}
-% \end{figure}
 
 \end{document}
