Added nand table.  Fixed a bunch of input.

--- a/school/elec_313/lab5/tex/header.tex
+++ b/school/elec_313/lab5/tex/header.tex
@@ -51,4 +51,4 @@
 \newpage
 
 % Number the enumerate environment (unordered lists) by letter:
-\renewcommand{\labelenumi}{\alph{enumi}.}
+% \renewcommand{\labelenumi}{\alph{enumi}.}
