Fixing X-axis of graphs.  More rewrites

--- a/school/elec_313/lab5/tex/data1.tex
+++ b/school/elec_313/lab5/tex/data1.tex
@@ -75,43 +75,43 @@
   \begin{picture}(7200.00,5040.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
-      \put(462,440){\makebox(0,0)[r]{\strut{}-1}}%
+      \put(726,440){\makebox(0,0)[r]{\strut{}-1 V}}%
       \csname LTb\endcsname%
-      \put(462,1059){\makebox(0,0)[r]{\strut{} 0}}%
+      \put(726,1059){\makebox(0,0)[r]{\strut{}0 V}}%
       \csname LTb\endcsname%
-      \put(462,1679){\makebox(0,0)[r]{\strut{} 1}}%
+      \put(726,1679){\makebox(0,0)[r]{\strut{}1 V}}%
       \csname LTb\endcsname%
-      \put(462,2298){\makebox(0,0)[r]{\strut{} 2}}%
+      \put(726,2298){\makebox(0,0)[r]{\strut{}2 V}}%
       \csname LTb\endcsname%
-      \put(462,2917){\makebox(0,0)[r]{\strut{} 3}}%
+      \put(726,2917){\makebox(0,0)[r]{\strut{}3 V}}%
       \csname LTb\endcsname%
-      \put(462,3536){\makebox(0,0)[r]{\strut{} 4}}%
+      \put(726,3536){\makebox(0,0)[r]{\strut{}4 V}}%
       \csname LTb\endcsname%
-      \put(462,4156){\makebox(0,0)[r]{\strut{} 5}}%
+      \put(726,4156){\makebox(0,0)[r]{\strut{}5 V}}%
       \csname LTb\endcsname%
-      \put(462,4775){\makebox(0,0)[r]{\strut{} 6}}%
+      \put(726,4775){\makebox(0,0)[r]{\strut{}6 V}}%
       \csname LTb\endcsname%
-      \put(594,220){\makebox(0,0){\strut{}-5e-05}}%
+      \put(858,220){\makebox(0,0){\strut{}-50us}}%
       \csname LTb\endcsname%
-      \put(1215,220){\makebox(0,0){\strut{}-4e-05}}%
+      \put(1453,220){\makebox(0,0){\strut{}-40us}}%
       \csname LTb\endcsname%
-      \put(1836,220){\makebox(0,0){\strut{}-3e-05}}%
+      \put(2047,220){\makebox(0,0){\strut{}-30us}}%
       \csname LTb\endcsname%
-      \put(2457,220){\makebox(0,0){\strut{}-2e-05}}%
+      \put(2642,220){\makebox(0,0){\strut{}-20us}}%
       \csname LTb\endcsname%
-      \put(3078,220){\makebox(0,0){\strut{}-1e-05}}%
+      \put(3236,220){\makebox(0,0){\strut{}-10us}}%
       \csname LTb\endcsname%
-      \put(3699,220){\makebox(0,0){\strut{} 0}}%
+      \put(3830,220){\makebox(0,0){\strut{}0 s}}%
       \csname LTb\endcsname%
-      \put(4319,220){\makebox(0,0){\strut{} 1e-05}}%
+      \put(4425,220){\makebox(0,0){\strut{}10us}}%
       \csname LTb\endcsname%
-      \put(4940,220){\makebox(0,0){\strut{} 2e-05}}%
+      \put(5020,220){\makebox(0,0){\strut{}20us}}%
       \csname LTb\endcsname%
-      \put(5561,220){\makebox(0,0){\strut{} 3e-05}}%
+      \put(5614,220){\makebox(0,0){\strut{}30us}}%
       \csname LTb\endcsname%
-      \put(6182,220){\makebox(0,0){\strut{} 4e-05}}%
+      \put(6208,220){\makebox(0,0){\strut{}40us}}%
       \csname LTb\endcsname%
-      \put(6803,220){\makebox(0,0){\strut{} 5e-05}}%
+      \put(6803,220){\makebox(0,0){\strut{}50us}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
