--- a/school/elec_313/lab5/tex/data3.tex
+++ b/school/elec_313/lab5/tex/data3.tex
@@ -75,45 +75,45 @@
   \begin{picture}(7200.00,5040.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
-      \put(462,440){\makebox(0,0)[r]{\strut{}-1}}%
+      \put(726,440){\makebox(0,0)[r]{\strut{}-1 V}}%
       \csname LTb\endcsname%
-      \put(462,1059){\makebox(0,0)[r]{\strut{} 0}}%
+      \put(726,1059){\makebox(0,0)[r]{\strut{}0 V}}%
       \csname LTb\endcsname%
-      \put(462,1679){\makebox(0,0)[r]{\strut{} 1}}%
+      \put(726,1679){\makebox(0,0)[r]{\strut{}1 V}}%
       \csname LTb\endcsname%
-      \put(462,2298){\makebox(0,0)[r]{\strut{} 2}}%
+      \put(726,2298){\makebox(0,0)[r]{\strut{}2 V}}%
       \csname LTb\endcsname%
-      \put(462,2917){\makebox(0,0)[r]{\strut{} 3}}%
+      \put(726,2917){\makebox(0,0)[r]{\strut{}3 V}}%
       \csname LTb\endcsname%
-      \put(462,3536){\makebox(0,0)[r]{\strut{} 4}}%
+      \put(726,3536){\makebox(0,0)[r]{\strut{}4 V}}%
       \csname LTb\endcsname%
-      \put(462,4156){\makebox(0,0)[r]{\strut{} 5}}%
+      \put(726,4156){\makebox(0,0)[r]{\strut{}5 V}}%
       \csname LTb\endcsname%
-      \put(462,4775){\makebox(0,0)[r]{\strut{} 6}}%
+      \put(726,4775){\makebox(0,0)[r]{\strut{}6 V}}%
       \csname LTb\endcsname%
-      \put(594,220){\makebox(0,0){\strut{}-7e-08}}%
+      \put(858,220){\makebox(0,0){\strut{}-70ns}}%
       \csname LTb\endcsname%
-      \put(1158,220){\makebox(0,0){\strut{}-6e-08}}%
+      \put(1398,220){\makebox(0,0){\strut{}-60ns}}%
       \csname LTb\endcsname%
-      \put(1723,220){\makebox(0,0){\strut{}-5e-08}}%
+      \put(1939,220){\makebox(0,0){\strut{}-50ns}}%
       \csname LTb\endcsname%
-      \put(2287,220){\makebox(0,0){\strut{}-4e-08}}%
+      \put(2479,220){\makebox(0,0){\strut{}-40ns}}%
       \csname LTb\endcsname%
-      \put(2852,220){\makebox(0,0){\strut{}-3e-08}}%
+      \put(3020,220){\makebox(0,0){\strut{}-30ns}}%
       \csname LTb\endcsname%
-      \put(3416,220){\makebox(0,0){\strut{}-2e-08}}%
+      \put(3560,220){\makebox(0,0){\strut{}-20ns}}%
       \csname LTb\endcsname%
-      \put(3981,220){\makebox(0,0){\strut{}-1e-08}}%
+      \put(4101,220){\makebox(0,0){\strut{}-10ns}}%
       \csname LTb\endcsname%
-      \put(4545,220){\makebox(0,0){\strut{} 0}}%
+      \put(4641,220){\makebox(0,0){\strut{}0 s}}%
       \csname LTb\endcsname%
-      \put(5110,220){\makebox(0,0){\strut{} 1e-08}}%
+      \put(5182,220){\makebox(0,0){\strut{}10ns}}%
       \csname LTb\endcsname%
-      \put(5674,220){\makebox(0,0){\strut{} 2e-08}}%
+      \put(5722,220){\makebox(0,0){\strut{}20ns}}%
       \csname LTb\endcsname%
-      \put(6239,220){\makebox(0,0){\strut{} 3e-08}}%
+      \put(6263,220){\makebox(0,0){\strut{}30ns}}%
       \csname LTb\endcsname%
-      \put(6803,220){\makebox(0,0){\strut{} 4e-08}}%
+      \put(6803,220){\makebox(0,0){\strut{}40ns}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
