--- a/school/elec_313/lab5/tex/report.tex
+++ b/school/elec_313/lab5/tex/report.tex
@@ -117,9 +117,10 @@ The objective is to construct and observe the operation of a CMOS inverter and N
 
 As seen in Figure~\ref{fig:inverter}, as the input voltage ($V_i$) is low (\SI{0}{V}), $V_o$ is high (\SI{5}{V}).  Conversely, when $V_i$ is high, $V_o$ is low. This relationship of $V_i$ to $V_o$ is why the configuration is called an inverter.  Also, the transition from high to low on the output happens when the input is approximately between 1 and 3V at $V_i$; that is, when the input voltage is less than one, the output voltage is almost exactly \SI{5}{V} and when the input voltage is greater than 3V, the output voltage is almost exactly \SI{0}{V}.  (Refer to Figure~\ref{fig:inverter} for a close up of the $V_i$ to $V_o$).  Additionally, the output voltage closely represents a square wave or an on/off relationship as the input voltage is swept back and forth between low and high.  It should also be noted that it takes 58.8 nanoseconds for the output voltage response to change from high to low.
 
-The circuit in Figure~\ref{schem:nand} operates as a NAND gate because when input A is low (\SI{0}{V}), as is the case in the first portion of CMOS NAND experiment, the inverting gate ($Q_1$) is shorted and the non-inverting gate $Q_3$ is open.  Therefore no matter what input B is shown, the output voltage is high (\SI{5}{V}).  In the second half of the experiment, when input A is high (\SI{5}{V}), $Q_1$ is inverted and therefore open and $Q_3$ is shorted. During this state, when input B is low, $Q_2$ is inverted and shorted allowing current to flow through it, but $Q_4$ is open blocking the current and the output voltage is again high.  The only time the output voltage is low, is when A is high and B is high, which means both the inverting gates $Q_1$ and $Q_2$ are open and don't allow any current to flow through them.
+The circuit in Figure~\ref{schem:nand} operates as a NAND gate (see Table~\ref{tab:nand}) because when input A is low (\SI{0}{V}), as is the case in the first portion of CMOS NAND experiment, the inverting gate ($Q_1$) is shorted and the non-inverting gate $Q_3$ is open.  Therefore no matter what input B is shown, the output voltage is high.  In the second half of the experiment, when input A is high, $Q_1$ is inverted and therefore open and $Q_3$ is shorted. During this state, when input B is low, $Q_2$ is inverted and shorted allowing current to flow through it, but $Q_4$ is open blocking the current and the output voltage is again high.  The only time the output voltage is low, is when A is high and B is high, which means both the inverting gates $Q_1$ and $Q_2$ are open and don't allow any current to flow through them.
 
-Figure~\ref{fig:nand} illustrates the NAND gate logic table (Table~\ref{tab:nand}) exactly.  When input A is low, $V_o$ is high whether input B is high or low.  When input A is high, $V_o$ is high while input B is low; when input B goes high, $V_o$ drops to low.
+%% Rewrote this part before reading the previous paragraph.  This information has already been given (less the graph and logic table.)
+%Figure~\ref{fig:nand} illustrates the NAND gate logic table (Table~\ref{tab:nand}) exactly.  When input A is low, $V_o$ is high whether input B is high or low.  When input A is high, $V_o$ is high while input B is low; when input B goes high, $V_o$ drops to low.
 
 % \section{Equations}
 % \label{sec:equations}
