--- a/school/elec_313/lab5/tex/report.tex
+++ b/school/elec_313/lab5/tex/report.tex
@@ -40,13 +40,13 @@ The objective is to construct and observe the operation of a CMOS inverter and N
 \label{sec:inverter}
 
 \begin{enumerate}
-\item Construct the circuit of figure~\ref{schem:inverter}.
+\item Construct the circuit of Figure~\ref{schem:inverter}.
 \item Connect the \si{V+} terminal (Pin 11) to the + supply voltage
 \item Connect the \si{V-} terminal (Pin 4) to the circuit ground.
 \item Set VDD to \SI{5}{V} using the HP source.
-\item Use the function generator to input $V_i$. Set the function generator to a frequency of \SI{20}{kHz} and select a triangle wave. Set the wave for 0 to 5 volts using the offset.
-\item Connect CHANNEL 1 of the oscilloscope to the input and CHANNEL 2 to the output.
-\item Use the x-y plot function of the scope to produce the transfer characteristic $V_o$ vs. $V_i$. (Press the main key, then select the xy softkey, then adjust the voltage scales as needed.)
+\item Use the function generator to input $V_i$. Set the function generator to a frequency of \SI{20}{kHz} and select a triangle wave. Set the wave for 0 to \SI{5}{V} using the offset.
+\item Connect channel 1 of the oscilloscope to the input and channel 2 to the output.
+\item Use the x-y plot function of the scope to produce the transfer characteristic $V_o$ vs. $V_i$. (Press the main key, then select the x-y soft-key, then adjust the voltage scales as needed.)
 \item Capture the $V_o$ vs. $V_i$.  data, so you can recreate the plot for the lab report.
 \item Adjust the amplitude and offset of the function generator for an input square wave of 0 to \SI{5}{V} as measured on the oscilloscope.
 \item Adjust the scope and capture both input and output on one screen for the report.
@@ -60,10 +60,10 @@ The objective is to construct and observe the operation of a CMOS inverter and N
 \item Construct the circuit of figure~\ref{schem:nand}.
 \item Connect the \si{v+} terminal (Pin 11) to the + supply voltage.
 \item Connect the \si{V-} terminal (Pin 4) to the circuit ground.
-\item Set the + supply voltage to 5 volts DC using the HP source.
-\item Set input A to 0 volts.
+\item Set the + supply voltage to \SI{5}{V} DC using the HP source.
+\item Set input A to \SI{0}{V}.
 \item Use the function generator for input B. Set the function generator to a frequency of \SI{20}{kHz} and select a square wave. Set the square wave for 0 to \SI{5}{V} using the offset.
-\item Connect CHANNEL 1 of the oscilloscope to the input and CHANNEL 2 to the output.
+\item Connect channel 1 of the oscilloscope to the input and channel 2 to the output.
 \item Adjust the scope and capture both input and output on one screen for the report.
 \item Repeat step 8 with the input A set to +\SI{5}{V}.
 \end{enumerate}
@@ -115,9 +115,9 @@ The objective is to construct and observe the operation of a CMOS inverter and N
 \section{Conclusion}
 \label{sec:conclusion}
 
-As seen in Figure~\ref{fig:inverter}, as the input voltage ($V_i$) is low (\SI{0}{V}), $V_o$ is high (\SI{5}{V}).  Conversely, when $V_i$ is high, $V_o$ is low. This relationship of $V_i$ to $V_o$ is why the configuration is called an inverter.  Also, the transition from high to low on the output happens when the input is approximately between 1 and 3V at $V_i$; that is, when the input voltage is less than one, the output voltage is almost exactly \SI{5}{V} and when the input voltage is greater than 3V, the output voltage is almost exactly \SI{0}{V}.  (Refer to Figure~\ref{fig:inverter} for a close up of the $V_i$ to $V_o$).  Additionally, the output voltage closely represents a square wave or an on/off relationship as the input voltage is swept back and forth between low and high.  It should also be noted that it takes 58.8 nanoseconds for the output voltage response to change from high to low.
+As seen in Figure~\ref{fig:inverter}, as the input voltage ($V_i$) is low (\SI{0}{V}), $V_o$ is high (\SI{5}{V}).  Conversely, when $V_i$ is high, $V_o$ is low. This relationship of $V_i$ to $V_o$ is why the configuration is called an inverter.  Also, the transition from high to low on the output happens when the input is approximately between 1 and \SI{3}{V} at $V_i$; that is, when the input voltage is less than one, the output voltage is almost exactly \SI{5}{V} and when the input voltage is greater than \SI{3}{V}, the output voltage is almost exactly \SI{0}{V}.  (Refer to Figure~\ref{fig:inverter} for a close up of the $V_i$ to $V_o$).  Additionally, the output voltage closely represents a square wave or an on/off relationship as the input voltage is swept back and forth between low and high.  It should also be noted that it takes \SI{58.8}{\nano\second} for the output voltage response to change from high to low.
 
-The circuit in Figure~\ref{schem:nand} operates as a NAND gate (see Table~\ref{tab:nand}) because when input A is low (\SI{0}{V}), the inverting gate ($Q_1$) is shorted and the non-inverting gate ($Q_3$) is open.  Therefore no matter what input B is shown, the output voltage is high.  When input A is high, $Q_1$ is inverted and therefore open and $Q_3$ is shorted. During this state, when input B is low, $Q_2$ is inverted and shorted allowing current to flow through it, but $Q_4$ is open blocking the current and the output voltage is again high.  The only time the output voltage is low, is when A is high and B is high, which means both the inverting gates $Q_1$ and $Q_2$ are open and don't allow any current to flow through them.  This behavior is shown in Figure~\ref{fig:nand}.
+The circuit in Figure~\ref{schem:nand} operates as a NAND gate (see Table~\ref{tab:nand}) because when input A is low (\SI{0}{V}), the inverting gate ($Q_1$) is shorted and the non-inverting gate ($Q_3$) is open.  Therefore no matter what input B is shown, the output voltage is high.  When input A is high, $Q_1$ is inverted and therefore open and $Q_3$ is shorted. During this state, when input B is low, $Q_2$ is inverted and shorted allowing current to flow through it, but $Q_4$ is open blocking the current and the output voltage is again high.  The only time the output voltage is low, is when A and B are high, which means both the inverting gates $Q_1$ and $Q_2$ are open.  This behavior is shown in Figure~\ref{fig:nand}.
 
 %% Rewrote this part before reading the previous paragraph.  This information has already been given (less the graph and logic table.)
 %Figure~\ref{fig:nand} illustrates the NAND gate logic table (Table~\ref{tab:nand}) exactly.  When input A is low, $V_o$ is high whether input B is high or low.  When input A is high, $V_o$ is high while input B is low; when input B goes high, $V_o$ drops to low.
