--- a/school/elec_313/lab6/tex/report.tex
+++ b/school/elec_313/lab6/tex/report.tex
@@ -19,19 +19,19 @@ The objective is to construct and observe the operation of a CMOS inverter and N
  \section{Schematics}
  \label{sec:schematics}
 
- \begin{figure}[hbtp]
-   \centering
-   \begin{subfigure}[b]{0.4\textwidth}
-     \includegraphics[width=\textwidth]{invert}
-     \caption{\label{schem:inverter} CMOS Inverter}
-   \end{subfigure}%
-   ~
-   \begin{subfigure}[b]{0.4\textwidth}
-     \includegraphics[width=\textwidth]{nand}
-     \caption{\label{schem:nand} CMOS NAND}
-   \end{subfigure}
-   \caption{\label{fig:schematics} Circuits used in this lab.}
- \end{figure}
+ % \begin{figure}[hbtp]
+ %   \centering
+ %   \begin{subfigure}[b]{0.4\textwidth}
+ %     \includegraphics[width=\textwidth]{invert}
+ %     \caption{\label{schem:inverter} CMOS Inverter}
+ %   \end{subfigure}%
+ %   ~
+ %   \begin{subfigure}[b]{0.4\textwidth}
+ %     \includegraphics[width=\textwidth]{nand}
+ %     \caption{\label{schem:nand} CMOS NAND}
+ %   \end{subfigure}
+ %   \caption{\label{fig:schematics} Circuits used in this lab.}
+ % \end{figure}
 
 \section{Procedure}
 \label{sec:procedure}
@@ -75,21 +75,9 @@ The objective is to construct and observe the operation of a CMOS inverter and N
 
 \begin{figure}[hbtp]
   \centering
-  \resizebox{1.0\textwidth}{!}{\input{data1.tex}}
-  \caption{\label{fig:inverter} Output of CMOS inverter}
+  \resizebox{1.0\textwidth}{!}{\input{graph.tex}}
+  \caption{\label{fig:graph} Graph}
 \end{figure}
-
-\begin{figure}[hbtp]
-  \centering
-  \resizebox{1.0\textwidth}{!}{\input{data2.tex}}
-  \caption{\label{fig:data2} Transition point in CMOS inverter}
-\end{figure}
-
-% \begin{figure}[hbtp]
-%   \centering
-%   \resizebox{1.0\textwidth}{!}{\input{data3.tex}}
-%   \caption{\label{fig:data3} Data 3}
-% \end{figure}
 
 \begin{table}[hbtp]
   \centering
@@ -102,15 +90,7 @@ The objective is to construct and observe the operation of a CMOS inverter and N
     1 & 1 & 0 \\
   \end{tabular}
   \caption{\label{tab:nand} NAND logic table}
-  \end{table}
-
-\begin{figure}[hbtp]
-  \centering
-  \resizebox{1.0\textwidth}{!}{\input{data4.tex}}
-  \caption{\label{fig:nand} Output of CMOS NAND gate}
-\end{figure}
-
-\newpage
+\end{table}
 
 \section{Conclusion}
 \label{sec:conclusion}
