--- a/school/elec_313/lab6/tex/graph.tex
+++ b/school/elec_313/lab6/tex/graph.tex
@@ -75,37 +75,39 @@
   \begin{picture}(7200.00,5040.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
-      \put(594,440){\makebox(0,0)[r]{\strut{} 0}}%
+      \put(946,704){\makebox(0,0)[r]{\strut{}0mA}}%
       \csname LTb\endcsname%
-      \put(594,922){\makebox(0,0)[r]{\strut{} 10}}%
+      \put(946,1156){\makebox(0,0)[r]{\strut{}10mA}}%
       \csname LTb\endcsname%
-      \put(594,1403){\makebox(0,0)[r]{\strut{} 20}}%
+      \put(946,1609){\makebox(0,0)[r]{\strut{}20mA}}%
       \csname LTb\endcsname%
-      \put(594,1885){\makebox(0,0)[r]{\strut{} 30}}%
+      \put(946,2061){\makebox(0,0)[r]{\strut{}30mA}}%
       \csname LTb\endcsname%
-      \put(594,2367){\makebox(0,0)[r]{\strut{} 40}}%
+      \put(946,2513){\makebox(0,0)[r]{\strut{}40mA}}%
       \csname LTb\endcsname%
-      \put(594,2848){\makebox(0,0)[r]{\strut{} 50}}%
+      \put(946,2966){\makebox(0,0)[r]{\strut{}50mA}}%
       \csname LTb\endcsname%
-      \put(594,3330){\makebox(0,0)[r]{\strut{} 60}}%
+      \put(946,3418){\makebox(0,0)[r]{\strut{}60mA}}%
       \csname LTb\endcsname%
-      \put(594,3812){\makebox(0,0)[r]{\strut{} 70}}%
+      \put(946,3870){\makebox(0,0)[r]{\strut{}70mA}}%
       \csname LTb\endcsname%
-      \put(594,4293){\makebox(0,0)[r]{\strut{} 80}}%
+      \put(946,4323){\makebox(0,0)[r]{\strut{}80mA}}%
       \csname LTb\endcsname%
-      \put(594,4775){\makebox(0,0)[r]{\strut{} 90}}%
+      \put(946,4775){\makebox(0,0)[r]{\strut{}90mA}}%
       \csname LTb\endcsname%
-      \put(726,220){\makebox(0,0){\strut{} 0}}%
+      \put(1078,484){\makebox(0,0){\strut{}0 V}}%
       \csname LTb\endcsname%
-      \put(1941,220){\makebox(0,0){\strut{} 1}}%
+      \put(2223,484){\makebox(0,0){\strut{}1 V}}%
       \csname LTb\endcsname%
-      \put(3157,220){\makebox(0,0){\strut{} 2}}%
+      \put(3368,484){\makebox(0,0){\strut{}2 V}}%
       \csname LTb\endcsname%
-      \put(4372,220){\makebox(0,0){\strut{} 3}}%
+      \put(4513,484){\makebox(0,0){\strut{}3 V}}%
       \csname LTb\endcsname%
-      \put(5588,220){\makebox(0,0){\strut{} 4}}%
+      \put(5658,484){\makebox(0,0){\strut{}4 V}}%
       \csname LTb\endcsname%
-      \put(6803,220){\makebox(0,0){\strut{} 5}}%
+      \put(6803,484){\makebox(0,0){\strut{}5 V}}%
+      \put(176,2739){\rotatebox{-270}{\makebox(0,0){\strut{}$I_D$}}}%
+      \put(3940,154){\makebox(0,0){\strut{}$V_{DS}$}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
