--- a/school/elec_313/lab6/tex/report.tex
+++ b/school/elec_313/lab6/tex/report.tex
@@ -9,12 +9,11 @@ The objective is to construct and observe the operation of a CMOS inverter and N
 \section{Equipment}
 \label{sec:equipment}
 
-\begin{itemize}
-\item ALD1105 Dual N-channel and P-channel matched pair MOSFET
-\item Power supply: HP E3631A
-\item Oscilloscope: Agilent 54622D
-\item Function generator: HP 33120A
-\end{itemize}
+\begin{tabular}{ll}
+  \centering
+  Transistor: 1N4007                          & Power supply: HP E3631A       \\
+  Resistors: \SI{330}{\ohm} (x3), \SI{2.2}{\kilo\ohm}, \SI{33}{\kilo\ohm}               & Multimeters: Fluke 8010A (x2),  \\
+\end{tabular}
 
  \section{Schematics}
  \label{sec:schematics}
